--- a/inedx.html
+++ b/inedx.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Feed Up</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./style/main.css">
 </head>
@@ -15,6 +15,7 @@
     <header class="header">
       <div class="container">
         <div class="header-row">
+          <div></div>
           <div class="header-logo">
             <img src="./images/logo.svg" alt="">
           </div>
@@ -78,7 +79,7 @@
                   alt="">
               </div>
               <h5 class="product-card_name">Mini Lavash Tovuqli</h5>
-              <p class="product-card_price">UZS 22 000,00</p>
+              <p class="product-card_price">22 000,00 UZS</p>
               <div class="product-card_buttons">
                 <button class="product-card_button_inc">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
@@ -193,7 +194,10 @@
             <p>общая сумма</p>
             <p class="footer-price">UZS 42 000 </p>
           </div>
-          <button class="footer-button">заказать</button>
+          <a href="./order.html">
+            <button class="footer-button">заказать</button>
+
+          </a>
         </div>
       </div>
     </footer>
