--- a/order.html
+++ b/order.html
@@ -107,10 +107,10 @@
                 </div>
               </div>
             </div>
-            
-            <div class="all-price">
-              <p>obshaya suma</p>
-              <p>24 000,00 UZS</p>
+
+            <div class="products-footer">
+              <p class="products-footer_text">Общая сумма</p>
+              <p class="products-footer_price">24 000,00 UZS</p>
             </div>
           </section>
 
